fix(sse): drain pending notifications atomically (AUDIT-B4)
The leftover half of AUDIT-B4. The issues.md entry bundled two unrelated bugs
and only the emitter-map keying one was fixed.

sendPendingNotifications did `range(key, 0, -1)` and then `delete(key)` as two
separate Redis calls, so a notification pushed between them was deleted having
never been sent, and nothing recorded that it happened. RENAME moves the whole
list in one operation instead: anything queued a microsecond later lands on a
fresh key this drain has no handle on, and the live key is never deleted at all.

The size pre-check stays as the fast path -- an empty queue is the common case
and must not cost a RENAME that can only fail. When RENAME does error the source
is simply gone (a second tab drained it, or it expired), which is not an error.

Also fixed the failure path while here: on a failed send the old code kept the
whole batch, including the notifications already delivered, which showed those
again on the next subscribe. Only the undelivered tail is requeued now, pushed
in reverse so LPUSH lays it back down in order.

Verified red-green: reverting to range-then-delete fails five of the new tests.

The 7-day TTL is now a constant shared with emitNotificationToUser, which is the
only real change detect_changes flags below the insertion -- the rest of its
CRITICAL reading is the line-offset artefact again.

386 backend tests green.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_011iGJZ7f7KdwA8u6Vp3hX3X